Port MaximumInscribedCircle and LargestEmptyCircle From https://github.com/locationtech/jts/pull/530 Closes #1029

--- a/src/algorithm/Makefile.am
+++ b/src/algorithm/Makefile.am
@@ -3,7 +3,8 @@
 #
 SUBDIRS = \
 	locate \
-	distance
+	distance \
+	construct
 
 noinst_LTLIBRARIES = libalgorithm.la
 
@@ -36,4 +37,5 @@ libalgorithm_la_SOURCES = \
 
 libalgorithm_la_LIBADD = \
 	locate/liblocation.la \
-	distance/libdistance.la
+	distance/libdistance.la \
+	construct/libconstruct.la
