--- a/src/noding/snapround/Makefile.am
+++ b/src/noding/snapround/Makefile.am
@@ -1,16 +1,17 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
-SUBDIRS = 
+SUBDIRS =
 
 noinst_LTLIBRARIES = libsnapround.la
 
-AM_CPPFLAGS = -I$(top_srcdir)/include 
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 libsnapround_la_SOURCES = \
     HotPixel.cpp \
+    HotPixelIndex.cpp \
     MCIndexPointSnapper.cpp \
     MCIndexSnapRounder.cpp \
     SimpleSnapRounder.cpp
 
-libsnapround_la_LIBADD = 
+libsnapround_la_LIBADD =
