--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -146,6 +146,7 @@ geos_unit_SOURCES = \
 	geom/TriangleTest.cpp \
 	geom/util/GeometryExtracterTest.cpp \
 	index/strtree/SIRtreeTest.cpp \
+	index/kdtree/KdTreeTest.cpp \
 	io/ByteOrderValuesTest.cpp \
 	io/WKBReaderTest.cpp \
 	io/WKBWriterTest.cpp \
