--- a/src/noding/Makefile.am
+++ b/src/noding/Makefile.am
@@ -28,6 +28,7 @@ libnoding_la_SOURCES = \
 	SegmentString.cpp \
 	SegmentStringUtil.cpp \
 	SimpleNoder.cpp \
-	NodingIntersectionFinder.cpp
+	NodingIntersectionFinder.cpp \
+	ValidatingNoder.cpp
 
 libnoding_la_LIBADD = snapround/libsnapround.la
