Add clustering functions

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -1542,6 +1542,19 @@ extern GEOSCoordSequence GEOS_DLL *GEOSNearestPoints_r(
     const GEOSGeometry* g1,
     const GEOSGeometry* g2);
 
+/************************************************************************
+ *
+ * Clustering functions. These take ownership of the provided geometry.
+ * Any components of the provided geometry that are not included in the
+ * returned cluster are destroyed.
+ *
+ ***********************************************************************/
+
+extern GEOSGeometry GEOS_DLL *GEOSClusterDBSCAN_r(GEOSContextHandle_t handle, GEOSGeometry* g, double eps, unsigned minPoints);
+extern GEOSGeometry GEOS_DLL *GEOSClusterGeometryDistance_r(GEOSContextHandle_t handle, GEOSGeometry* g, double d);
+extern GEOSGeometry GEOS_DLL *GEOSClusterGeometryIntersects_r(GEOSContextHandle_t handle, GEOSGeometry* g);
+extern GEOSGeometry GEOS_DLL *GEOSClusterEnvelopeDistance_r(GEOSContextHandle_t handle, GEOSGeometry* g, double d);
+extern GEOSGeometry GEOS_DLL *GEOSClusterEnvelopeIntersects_r(GEOSContextHandle_t handle, GEOSGeometry* g);
 
 /* ========= Algorithms ========= */
 
@@ -3971,6 +3984,20 @@ extern int GEOS_DLL GEOSGeomGetLength(
 extern GEOSCoordSequence GEOS_DLL *GEOSNearestPoints(
     const GEOSGeometry* g1,
     const GEOSGeometry* g2);
+
+/************************************************************************
+ *
+ * Clustering functions. These take ownership of the provided geometry.
+ * Any components of the provided geometry that are not included in the
+ * returned cluster are destroyed.
+ *
+ ***********************************************************************/
+
+extern GEOSGeometry GEOS_DLL *GEOSClusterDBSCAN(GEOSGeometry* g, double eps, unsigned minPoints);
+extern GEOSGeometry GEOS_DLL *GEOSClusterGeometryDistance(GEOSGeometry* g, double d);
+extern GEOSGeometry GEOS_DLL *GEOSClusterGeometryIntersects(GEOSGeometry* g);
+extern GEOSGeometry GEOS_DLL *GEOSClusterEnvelopeDistance(GEOSGeometry* g, double d);
+extern GEOSGeometry GEOS_DLL *GEOSClusterEnvelopeIntersects(GEOSGeometry* g);
 
 
 /* ========== Algorithms ========== */
