--- a/include/geos/noding/Makefile.am
+++ b/include/geos/noding/Makefile.am
@@ -1,7 +1,9 @@
 #
 # This file is part of project GEOS (http://trac.osgeo.org/geos/) 
 #
-SUBDIRS = snapround
+SUBDIRS = \
+	snapround \
+	snap
 
 EXTRA_DIST =
 
