--- a/src/operation/overlayng/Makefile.am
+++ b/src/operation/overlayng/Makefile.am
@@ -1,13 +1,14 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
 
 noinst_LTLIBRARIES = libopoverlayng.la
 
-AM_CPPFLAGS = -I$(top_srcdir)/include 
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 libopoverlayng_la_SOURCES = \
+    EdgeSourceInfo.cpp \
     OverlayLabel.cpp
 
-libopoverlayng_la_LIBADD = 
+libopoverlayng_la_LIBADD =
 
