OverlayNoder, LineLimiter, RingClipper, start of OverlayUtil, un-tested drafts that compile

--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -10,5 +10,9 @@ geosdir = $(includedir)/geos/operation/overlayng
 geos_HEADERS = \
     EdgeSourceInfo.h \
     InputGeometry.h \
-    OverlayLabel.h
+    InputNoder.h \
+    LineLimiter.h \
+    OverlayLabel.h \
+    OverlayUtil.h \
+    RingClipper.h 
 
