Edge draft builds

--- a/src/operation/overlayng/Makefile.am
+++ b/src/operation/overlayng/Makefile.am
@@ -7,6 +7,7 @@ noinst_LTLIBRARIES = libopoverlayng.la
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
 libopoverlayng_la_SOURCES = \
+    Edge.cpp \
     EdgeSourceInfo.cpp \
     InputGeometry.cpp \
     InputNoder.cpp \
