--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -8,6 +8,7 @@ SUBDIRS =
 geosdir = $(includedir)/geos/operation/overlayng
 
 geos_HEADERS = \
+    Edge.h \
     EdgeSourceInfo.h \
     InputGeometry.h \
     InputNoder.h \
