EdgeKey draft builds

--- a/src/operation/overlayng/Makefile.am
+++ b/src/operation/overlayng/Makefile.am
@@ -8,6 +8,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include
 
 libopoverlayng_la_SOURCES = \
     Edge.cpp \
+    EdgeKey.cpp \
     EdgeSourceInfo.cpp \
     InputGeometry.cpp \
     InputNoder.cpp \
