--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -10,6 +10,7 @@ geosdir = $(includedir)/geos/operation/overlayng
 geos_HEADERS = \
     Edge.h \
     EdgeKey.h \
+    EdgeMerger.h \
     EdgeSourceInfo.h \
     InputGeometry.h \
     InputNoder.h \
