--- a/src/operation/overlayng/Makefile.am
+++ b/src/operation/overlayng/Makefile.am
@@ -9,6 +9,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include
 libopoverlayng_la_SOURCES = \
     Edge.cpp \
     EdgeKey.cpp \
+    EdgeMerger.cpp \
     EdgeSourceInfo.cpp \
     InputGeometry.cpp \
     InputNoder.cpp \
