--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -188,6 +188,7 @@ geos_unit_SOURCES = \
 	operation/overlayng/OverlayGraphTest.cpp \
 	operation/overlayng/OverlayNGPointsTest.cpp \
 	operation/overlayng/OverlayNGMixedPointsTest.cpp \
+	operation/overlayng/OverlayNGSnappingNoderTest.cpp \
 	operation/overlayng/OverlayNGTest.cpp \
 	operation/polygonize/PolygonizeTest.cpp \
 	operation/sharedpaths/SharedPathsOpTest.cpp \
