--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -186,6 +186,7 @@ geos_unit_SOURCES = \
 	operation/overlayng/RingClipperTest.cpp \
 	operation/overlayng/LineLimiterTest.cpp \
 	operation/overlayng/OverlayGraphTest.cpp \
+	operation/overlayng/OverlayNGFloatingNoderTest.cpp \
 	operation/overlayng/OverlayNGPointsTest.cpp \
 	operation/overlayng/OverlayNGMixedPointsTest.cpp \
 	operation/overlayng/OverlayNGSnappingNoderTest.cpp \
