--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -190,6 +190,7 @@ geos_unit_SOURCES = \
 	operation/overlayng/OverlayNGPointsTest.cpp \
 	operation/overlayng/OverlayNGMixedPointsTest.cpp \
 	operation/overlayng/OverlayNGSnappingNoderTest.cpp \
+	operation/overlayng/OverlayNGSnappingOneTest.cpp \
 	operation/overlayng/OverlayNGTest.cpp \
 	operation/polygonize/PolygonizeTest.cpp \
 	operation/sharedpaths/SharedPathsOpTest.cpp \
