Added PrecisionUtil and PrecisionUtilTest

--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -29,5 +29,6 @@ geos_HEADERS = \
     OverlayNG.h \
     OverlayUtil.h \
     PolygonBuilder.h \
+    PrecisionUtil.h \
     RingClipper.h \
     RobustClipEnvelopeComputer.h
