PrecisionReducer and PrecisionReducerText

--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -29,6 +29,7 @@ geos_HEADERS = \
     OverlayNG.h \
     OverlayUtil.h \
     PolygonBuilder.h \
+    PrecisionReducer.h \
     PrecisionUtil.h \
     RingClipper.h \
     RobustClipEnvelopeComputer.h
