Add UnaryUnionNG and some misc diffs

--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -32,4 +32,5 @@ geos_HEADERS = \
     PrecisionReducer.h \
     PrecisionUtil.h \
     RingClipper.h \
-    RobustClipEnvelopeComputer.h
+    RobustClipEnvelopeComputer.h \
+    UnaryUnionNG.h
