Fix makefile in overlayng

--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -25,7 +25,7 @@ geos_HEADERS = \
     OverlayLabel.h \
     OverlayLabeller.h \
     OverlayMixedPoints.h \
-    OverlayPoints.h
+    OverlayPoints.h \
     OverlayNG.h \
     OverlayNGSnapIfNeeded.h \
     OverlayUtil.h \
